--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -2,12 +2,12 @@
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
-#défini l'encodage pour data.sql
+#dÃ©fini l'encodage pour data.sql
 spring.datasource.sql-script-encoding=UTF-8
 
 #Nos configurations
 
-mes-configs.limitDeProduits=4
+mes-configs.limitDeProduits=1
 
 #Eureka
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
